fix website padding on mobile

--- a/app/(user)/home.styles.scss
+++ b/app/(user)/home.styles.scss
@@ -82,7 +82,7 @@
       }
     }
   }
-  @media screen and (max-width: 375px) {
+  @media screen and (max-width: 412px) {
     .info-container {
       h1 {
         font-size: 2.8rem;
@@ -277,6 +277,29 @@
       flex-direction: column;
       gap: 0.2em;
       width: 100%;
+    }
+  }
+
+  @media screen and (max-width: 777px) {
+    display: flex;
+    flex-direction: column;
+    .vertical-bar {
+      display: none;
+    }
+  }
+
+  @media screen and (max-width: 479px) {
+    margin: 0px;
+    gap: 5em;
+    .service {
+      flex-direction: column;
+      padding: 0px;
+    }
+    .services-container {
+      gap: 3em;
+    }
+    .services-row {
+      gap: 3em;
     }
   }
 }
